fix(pagination): tip for align pagination items in docs

--- a/docs/styles/organisms/content.css
+++ b/docs/styles/organisms/content.css
@@ -20,7 +20,7 @@
     margin-top: .62rem;
   }
 
-  a:not(.button),
+  a:not(.button):not(.pagination-item),
   .link {
 
     &:hover {
